back-end/manifest/Vault.AuthService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-authservice
  labels:
    app: vault-authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault-authservice
  template:
    metadata:
      labels:
        app: vault-authservice
    spec:
      containers:
        - name: vault-authservice
          image: robadrinacr1.azurecr.io/vault-authservice:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: vault-authservice-service
spec:
  selector:
    app: vault-authservice
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3000
