back-end/manifest/Vault.AuthService.Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-authservice-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /vault/service
            pathType: Prefix
            backend:
              service:
                name: vault-authservice-service
                port:
                  number: 3000
